# tom-bombadil

./: .gitignore  README.md  flake.nix  test-create-sbom-json.sh  test.nix  tom-bombadil.cabal
.github/workflows/: ci.yml
app/: create-sbom.hs  upload-bom.hs
